# Removed dead code - Fixed bug #35386 (firebird: first row is null) - Fixed bug #36128 (Interbase PDO - timestamp columns return NULL) - Fixed bug #39700 (NUMERIC error when result precision are 7,8 or 12-14 )